<resources>
    <string name="app_name">GoGovMobile</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="login_to_continue">Login To Continue</string>
    <string name="email">Email</string>
    <string name="sign_in">SIGN IN</string>
    <string name="create_new_account">Create New Account</string>
    <string name="name">Name</string>
    <string name="add_image">Add Image</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="select_user">Select User</string>
    <string name="type_a_message">Type a Message...</string>
    <string name="active">Active</string>
    <string name="sign_in_with_google">Sign In With Google</string>
    <string name="personal_information">Personal Information</string>
    <string name="full_name">Full Name</string>
    <string name="id_number">ID/Passport Number</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="phone_number">Phone Number</string>
    <string name="residential_address">Residential Address</string>
    <string name="select_province">Select Province</string>
    <string name="type_of_educational_service">Type of Educational Service</string>
    <string name="service_type">Service Type</string>
    <string name="institution_name">Institution Name</string>
    <string name="select_grade_level">Select Grade/Level of Study</string>
    <string name="preferred_start_date">Preferred Start Date</string>
    <string name="special_requirements">Special Requirements</string>
    <string name="education_history">Education History</string>
    <string name="last_school_attended">Last School Attended</string>
    <string name="highest_grade_completed">Highest Grade Completed</string>
    <string name="year_of_completion">Year of Completion</string>
    <string name="financial_aid_information">Financial Aid Information</string>
    <string name="apply_for_financial_aid">Apply for Financial Aid?</string>
    <string name="income_bracket">Household Income Bracket</string>
    <string name="document_uploads">Required Document Uploads</string>
    <string name="upload_id">Upload ID Copy</string>
    <string name="upload_proof_of_residence">Upload Proof of Residence</string>
    <string name="upload_transcripts">Upload School Records/Transcripts</string>
    <string name="upload_motivation_letter">Upload Motivation Letter</string>
    <string name="declaration_statement">I declare that the information provided is accurate.</string>
    <string name="consent_to_data_use">I consent to the use of my data for educational application purposes.</string>
    <string name="submit">Submit</string>
    <string-array name="gender_options">
        <item>Male</item>
        <item>Female</item>
        <item>Other</item>
    </string-array>
    <string-array name="vaccination_types">
        <item>COVID-19 Vaccine</item>
        <item>Influenza Vaccine</item>
        <item>Hepatitis B Vaccine</item>
    </string-array>
    <string-array name="vaccination_centers">
        <item>Johannesburg Vaccination Center</item>
        <item>Cape Town Vaccination Center</item>
        <item>Durban Vaccination Center</item>
        <item>Pretoria Vaccination Center</item>
    </string-array>
    <string-array name="province_options">
        <item>Eastern Cape</item>
        <item>Free State</item>
        <item>Gauteng</item>
        <item>KwaZulu-Natal</item>
        <item>Limpopo</item>
        <item>Mpumalanga</item>
        <item>Northern Cape</item>
        <item>North West</item>
        <item>Western Cape</item>
    </string-array>
    <string-array name="grades">
        <item>Grade 1</item>
        <item>Grade 2</item>
        <item>Grade 3</item>
        <item>Grade 4</item>
        <item>Grade 5</item>
        <item>Grade 6</item>
        <item>Grade 7</item>
        <item>Grade 8</item>
        <item>Grade 9</item>
        <item>Grade 10</item>
        <item>Grade 11</item>
        <item>Grade 12</item>
    </string-array>
    <string-array name="provinces">
        <item>Gauteng</item>
        <item>Western Cape</item>
        <item>Eastern Cape</item>
        <item>KwaZulu-Natal</item>
        <item>Free State</item>
        <item>Mpumalanga</item>
        <item>Limpopo</item>
        <item>North West</item>
        <item>Northern Cape</item>
    </string-array>
    <string-array name="license_category_options">
        <item>Code A - Motorcycles</item>
        <item>Code B - Light Motor Vehicles</item>
        <item>Code C - Heavy Motor Vehicles</item>
    </string-array>
    <string-array name="test_center_options">
        <item>Johannesburg Testing Center</item>
        <item>Pretoria Testing Center</item>
        <item>Durban Testing Center</item>
        <item>Cape Town Testing Center</item>
    </string-array>
    <string-array name="provinces_array">
        <item>Eastern Cape</item>
        <item>Free State</item>
        <item>Gauteng</item>
        <item>KwaZulu-Natal</item>
        <item>Limpopo</item>
        <item>Mpumalanga</item>
        <item>Northern Cape</item>
        <item>North West</item>
        <item>Western Cape</item>
    </string-array>
    <string-array name="service_type_array">
        <item>Primary School Enrollment</item>
        <item>High School Enrollment</item>
        <item>Higher Education Application</item>
        <item>Special Needs Education</item>
        <item>Adult Education</item>
    </string-array>
    <string-array name="grade_level_array">
        <item>Grade R</item>
        <item>Grade 1</item>
        <item>Grade 2</item>
        <item>Grade 3</item>
        <item>Grade 4</item>
        <item>Grade 5</item>
        <item>Grade 6</item>
        <item>Grade 7</item>
        <item>Grade 8</item>
        <item>Grade 9</item>
        <item>Grade 10</item>
        <item>Grade 11</item>
        <item>Grade 12</item>
        <item>Undergraduate (Bachelors)</item>
        <item>Postgraduate (Masters)</item>
        <item>Doctorate (PhD)</item>
    </string-array>
    <string-array name="income_bracket_array">
        <item>Less than R100,000</item>
        <item>R100,000 - R200,000</item>
        <item>R200,000 - R400,000</item>
        <item>R400,000 - R800,000</item>
        <item>R800,000 - R1,200,000</item>
        <item>Above R1,200,000</item>
    </string-array>
    <string name="chat_prompt_hint">Type a message…</string>
    <string name="send_button_description">Send message</string>
    <string name="add_image_button_description">Add image</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="terms_and_conditions">Terms And Conditions</string>
    <string name="accept_and_continue">Accept and Continue</string>
    <string name="frequently_asked_questions">Frequently Asked Questions</string>
    <string name="continue_faq">Continue</string>
    <string name="admin_analytics">Admin Analytics</string>
    <string name="bursary_applications">Bursary Applications</string>
    <string name="driver_s_license_applications">Driver\'s License Applications</string>
    <string name="passport_applications">Passport Applications</string>
    <string name="vaccination_appointments">Vaccination Appointments</string>
    <string name="scheduled_appointments">Scheduled Appointments</string>
    <string name="user_feedback_over_time">User Feedback Over Time</string>
    <string name="admin_dashboard">Admin Dashboard</string>
    <string name="welcome_admin">Welcome, Admin</string>
    <string name="applications">Applications</string>
    <string name="reports">Reports</string>
    <string-array name="report_types">
        <item>Monthly Report</item>
        <item>Quarterly Report</item>
        <item>Yearly Report</item>
    </string-array>
    <string-array name="passport_types">
        <item>Tourist Passport</item>
        <item>Business Passport</item>
        <item>Diplomatic Passport</item>
        <item>Emergency Passport</item>
    </string-array>
    <string-array name="processing_centers">
        <item>Pretoria</item>
        <item>Cape Town</item>
        <item>Durban</item>
        <item>Port Elizabeth</item>
        <item>Johannesburg</item>
    </string-array>
</resources>